dev/scss/_flex-aside.scss
@use 'variables' as *;
@use 'mixins' as *;

.content-wrap{
    padding-top: 2rem;

   @media (min-width:64em){
       & {
        //    general styles for grid layout
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           column-gap:.5rem;
           max-width: 960px;
           margin: 0 auto;

        //  tells the gallery section which cell to occupy
           .gallery-section{
               grid-column: 1/2;
               grid-row: 2/2;
           }

           .food{
        // esnsure that theres no excess gap between the gallery and the top section
            margin-bottom: -5.375em;
           }

           .aside-2{
            margin-top: -4.5rem;
           }

       }
   }
}

